Initial tentative support for Loom